text align fixing

--- a/resources/css/imageCrop.css
+++ b/resources/css/imageCrop.css
@@ -4,7 +4,7 @@ body {
     background: white;
     margin: 0;
     padding: 0;
-    text-align: center;
+    /*text-align: center;*/
 }
 a {
     text-decoration: underline;
